# newrelic-as-code

./: .gitignore  CLAUDE.md  DEVELOPMENT.md  README.md  graphql.config.yaml  pyproject.toml
.github/workflows/: ci.yaml
newrelic_as_code/: __init__.py  client.py  models.py  updater.py  utils.py
newrelic_as_code/models/: __init__.py  base.py  dashboard.py  query.py  variable.py  widget.py
newrelic_as_code/models/config/: __init__.py  common.py  widgets.py
tests/: test_models.py  test_reconcile.py
